--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
     <div class="container">
         <h2><i class="bi bi-minecart-loaded"></i> GRAM Givers Monitoring</h2>
+        <p class="warning"><b>Wait couple of minutes to get data loaded! It depends on Tonviewer response.</b></p>
         <div id="extraSmallWallets" class="wallet-category">
             <h3><i class="bi bi-dot"></i>Extra Small Givers</h3>
         </div>
