--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="https://t.me/petrovxyz">developed by @petrovxyz</a></li>
-                    <li><a href="https://t.me/gram_connect_gram"><i class="bi bi-chat"></i> Become part of the community</a></li>
-                    <li><a href="https://t.me/GramMiningPool"><i class="bi bi-bounding-box"></i> Mine GRAM</a></li>
+                    <li><a href="https://t.me/petrovxyz" target="_blank"><i class="bi bi-code-slash"></i> @petrovxyz</a> | <a href="https://github.com/petrovxyz/Gram-Givers-Monitoring" target="_blank"><i class="bi bi-github"></i> Give a star</a></li>
+                    <li><a href="https://t.me/gram_connect_gram" target="_blank"><i class="bi bi-chat"></i> Become part of the community</a></li>
+                    <li><a href="https://t.me/GramMiningPool" target="_blank"><i class="bi bi-bounding-box"></i> Mine GRAM</a></li>
                 </ul>
             </nav>
         </div>
