--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3><i class="bi bi-dot"></i>Extra Small Givers</h3>
         </div>
         <div id="smallWallets" class="wallet-category">
-            <h3><i class="bi bi-dot"></i>Small Givers</h3>
+            <h3><i class="bi bi-dot"></i>Small Givers [ ✅ Mined ]</h3>
         </div>
         <div id="mediumWallets" class="wallet-category">
             <h3><i class="bi bi-dot"></i>Medium Givers [ ✅ Mined ]</h3>
